--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ section a:hover {
   <div class="container">
     <a class="navbar-brand fw-bold d-flex align-items-center" href="#">
   <img src="logomoon.PNG" alt="Centro Logo" height="50" class="me-2">
-  <span class="text-brand">Centro Cultural Islamico Del Carmel</span>
+  <span class="text-brand flex-grow-1 text-wrap">Centro Cultural Islamico Del Carmel</span>
 </a>
 
     <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
