--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ section a:hover {
             <i class="fas fa-bullhorn text-success me-2"></i> Eventos Próximos
           </h5>
           <p class="card-text">
-            <em>Actualmente no hay eventos previstos. Compartiremos novedades próximamente inshallah.</em>
+            <strong>Oración del Jumuah a las <strong> 14:00</strong> 
           </p>
         </div>
       </div>
